--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.8",
+    "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
