--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.3",
+    "i18next": "^24.1.0",
+    "i18next-browser-languagedetector": "^8.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^15.2.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
